--- a/WestcoastEducation.Web/Views/Shared/_Layout.cshtml
+++ b/WestcoastEducation.Web/Views/Shared/_Layout.cshtml
@@ -4,36 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/507df99975.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    @RenderSection("styles", false)
+    <!-- Egen CSS -->
     <link rel="stylesheet" href="~/css/colors.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navigation.css" asp-append-version="true" />
-    @RenderSection("styles", false)
     <link rel="stylesheet" href="~/css/styles.css">
     <title>@ViewBag.PageTitle Westcoast Education</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
-            <h1 class="logo">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" asp-action="Index" asp-controller="Home">
                 <span class="logo-text">
                     <i class="fa-solid fa-graduation-cap"></i>
-                    Westcoast
+                    Westcoast Education
                 </span>
-                Education
-            </h1>
-            <ul>
-                <li><a asp-action="Index" asp-controller="Home">Start</a></li>
-                <li><a asp-action="Index" asp-controller="Classroom">Utbildningar</a></li>
-            </ul>
+                With Bootstrap</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" asp-action="Index" asp-controller="Home">Start<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Utbildningar
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" asp-action="Index" asp-controller="Classroom">Klassrumskurser</a>
+                            <a class="dropdown-item" asp-action="Index" asp-controller="Distance">Distanskurser</a>
+                            <a class="dropdown-item" asp-action="Index" asp-controller="OnDemand">On-Demand kurser</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="offer-container">
-            @await Html.PartialAsync("_OnDemandOffer")
-        </section>
+        @RenderSection("OnDemand", false)
         @RenderBody()
+        <!-- Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
     </main>
 </body>
 
