--- a/WestcoastEducation.Web/Views/Shared/_OnDemandOffer.cshtml
+++ b/WestcoastEducation.Web/Views/Shared/_OnDemandOffer.cshtml
@@ -1,6 +1,6 @@
 <div class="offer">
     <div class="ondemand-offer">
-        <h5>On-Demand Erbjudande!</h5>
-        <h6>Köp 2 kurser betala för 1</h6>
+        <h6>On-Demand Erbjudande!</h6>
+        <p>Köp 2 kurser betala för 1</p>
     </div>
 </div>
