--- a/WestcoastEducation.Web/wwwroot/css/landing-page.css
+++ b/WestcoastEducation.Web/wwwroot/css/landing-page.css
@@ -3,7 +3,7 @@
     width: 100vw;
     background: url("img/landing-page-WE.jpg") no-repeat center center/cover;
     position: absolute;
-    opacity: 0.6;
+    opacity: 0.4;
     left: 0px;
     top: 0px;
     z-index: -1;
@@ -27,17 +27,5 @@
 }
 
 .landing .content h1 {
-    color: var(--light-color);
-    font-size: 3rem;
-    font-weight: 600;
-}
-
-.landing .content-text {
-    width: 50vw;
-}
-
-.landing .content p {
-    font-size: 1.2rem;
-    max-width: 400vh;
-    margin: 2rem;
+    color: var(--dark-color);
 }
