--- a/WestcoastEducation.Web/wwwroot/css/styles.css
+++ b/WestcoastEducation.Web/wwwroot/css/styles.css
@@ -6,46 +6,6 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: "Roboto Mono", monospace;
-    background: var(--primary-background-color);
-    line-height: 1.6;
-}
-
-h1 {
-    font-weight: 1200;
-    line-height: 1.8;
-}
-
-h2 {
-    font-weight: 400;
-    line-height: 1.2;
-}
-
-a {
-    text-decoration: none;
-}
-
-ul {
-    list-style: none;
-}
-
-.button {
-    background-color: var(--light-color);
-    padding: 0.8rem;
-    border-radius: 10px;
-    box-shadow: 8px 5px 10px var(--dark-color);
-    border: 2px solid var(--primary-text-color);
-}
-
-.button a:active {
-    color: var(--secondary-color);
-}
-
-.button:hover {
-    background-color: var(--primary-color);
-}
-
 .course-container a {
     color: var(--dark-color);
     text-decoration: underline;
@@ -64,22 +24,12 @@ ul {
     color: var(--primary-color);
 }
 
-.icons {
-    padding: 2rem;
-}
-
-.icons h3 {
-    font-weight: bold;
-}
-
-.icons i {
-    background-color: var(--primary-color);
-    color: var(--light-color);
-    padding: 1rem;
-}
-
 .page {
-    padding: 4rem;
+    margin-top: 2rem;
+}
+
+.page p {
+    padding: 0rem 2rem 2rem;
 }
 
 .page-title {
@@ -95,12 +45,11 @@ ul {
     justify-content: center;
     align-items: center;
     background-color: var(--primary-border-color);
-    height: 8vh;
+    height: 10vh;
     width: 100vw;
     color: var(--dark-color);
 }
 
 .offer {
-    padding: 14px;
-    height: 8vh;
+    margin-top: 1rem;
 }
