--- a/WestcoastEducation.Web/Views/Home/Index.cshtml
+++ b/WestcoastEducation.Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             erbjuder även distansutbildning där elever kan närvara via länk till klassrum där en lärare genomför
             lektionen. Vi kommer nu också att göra en stor satsning på att kunna tillhandahålla utbildningar, seminarier
             och webinarier "OnDemand".</p>
-        <button type="button" class="btn btn-outline-warning btn-lg">
+        <button type="button" class="btn btn-outline-warning custom-outline">
             @Html.ActionLink("Se våra utbildningar", "Index", "Classroom")</button>
     </div>
 </div>
