--- a/WestcoastEducation.Web/Views/Shared/_Layout.cshtml
+++ b/WestcoastEducation.Web/Views/Shared/_Layout.cshtml
@@ -25,13 +25,13 @@
                     <i class="fa-solid fa-graduation-cap"></i>
                     Westcoast Education
                 </span>
-                With Bootstrap</a>
+                with Bootstrap</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" asp-action="Index" asp-controller="Home">Start<span
                                 class="sr-only">(current)</span></a>
