--- a/WestcoastEducation.Web/wwwroot/css/styles.css
+++ b/WestcoastEducation.Web/wwwroot/css/styles.css
@@ -6,10 +6,14 @@
     box-sizing: border-box;
 }
 
+.navbar-nav {
+    margin: 0rem 2rem 0rem;
+}
+
 .course-container a {
     color: var(--dark-color);
     text-decoration: underline;
-    font-weight: 800;
+    font-weight: 600;
 }
 
 .course-container a:active {
@@ -52,4 +56,8 @@
 
 .offer {
     margin-top: 1rem;
+}
+
+.custom-outline {
+    border-width: 3px;
 }
